--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,10 +12,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-
   cupertino_icons: ^0.1.3
+  provider: ^4.3.2+4
 
 dev_dependencies:
   flutter_test:
