--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^0.1.3
   provider: ^4.3.2+4
+  firebase_core: ^0.4.0+9
+  cloud_firestore: ^0.12.9+5
 
 dev_dependencies:
   flutter_test:
