--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,14 +12,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  location: ^3.2.4
   cupertino_icons: ^0.1.3
   provider: ^4.3.2+4
   firebase_core: ^0.4.0+9
   cloud_firestore: ^0.12.9+5
+  firebase_auth: ^0.16.1
+  image_picker: ^0.6.7+22
+  firebase_storage: ^3.1.6
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
 flutter:
   uses-material-design: true
